Dashboard intro section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+
+<nav class="navbar navbar-default">
+    <div class="text-center">
+        <h3>Bootstrap 3</h3>
+    </div>
+</nav>
+
