--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 no-float bg-success">
             <app-side-nav></app-side-nav>
         </div>
-        <div class="col-sm-9">
+        <div class="col-sm-9 no-float">
             <app-header></app-header>
             <router-outlet></router-outlet>
         </div>
