--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,9 +1,16 @@
-<div class="text-center bg-success">
-    <ul class="list-unstyled">
-        <li></li>
-        <li>j</li>
-        <li>j</li>
-        <li>j</li>
-        <li>j</li>
-    </ul>
+<div class="bg-success">
+    <div class="list-group">
+        <ul class="list-unstyled">
+            <li routerLink="/views/dashboard"><a class="list-group-item">Dashboard</a></li>
+            <li><a class="list-group-item">How it works !</a></li>
+            <li routerLink="/views/project-comp/headers"><a class="list-group-item">Project components</a></li>
+
+            <li routerLink="/views/daily-updates1" ><a class="list-group-item">Daily updates</a></li>
+            
+            <li routerLink="/views/code-playground/test"><a class="list-group-item">Code playground</a></li>
+            <li routerLink="/views/cheatsheets"><a class="list-group-item">Cheatsheets</a></li>
+            <li routerLink="/views/emmet"><a class="list-group-item">Emmet</a></li>
+            <li routerLink="/views/references"><a class="list-group-item">References</a></li>
+        </ul>
+    </div>
 </div>
