--- a/src/app/views/daily-updates1/du-index/du-index.component.html
+++ b/src/app/views/daily-updates1/du-index/du-index.component.html
@@ -1,20 +1,31 @@
 <div class="text-right">
-    <button [routerLink]="['/views/daily-updates1/points-to-remember']" >Points to remember</button>
+    <button [routerLink]="['/views/daily-updates1/points-to-remember']" class="btn btn-primary">Points to
+        remember</button>
 </div>
 
 
 
 <div class="outer_div">
-    <p class="text-center" data-toggle="collapse" data-target="#10"><b> Aligning a button to right </b></p>
-    <pre id="10" class="collapse">
+    <p class="text-center" data-toggle="collapse" data-target="#1"><b> Aligning a button to right </b></p>
+    <pre id="1" class="collapse">
         <!-- <p><button [routerLink]="['/daily-updates/external_js_file_comm']" >External Javascript file communication with angular</button></p> -->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 bg-light text-right">
-                    <button type="button" class="btn btn-primary">Cancel</button>
-                    <button type="button" class="btn btn-warning">Save</button>
-                </div>
-            </div>
+        <div class="text-right">
+            <button type="button" class="btn btn-primary">Cancel</button>
+            <button type="button" class="btn btn-warning">Save</button>
         </div>
+    </pre>
+</div>
+
+<div class="outer_div">
+    <p class="text-center" data-toggle="collapse" data-target="#2"><b> Change col order using media quries </b></p>
+    <pre id="2" class="collapse">
+        <p><button [routerLink]="['/views/daily-updates1/col-order']" >Change col order using media quries</button></p>
+    </pre>
+</div>
+
+<div class="outer_div">
+    <p class="text-center" data-toggle="collapse" data-target="#3"><b> Navigate/Redirect to same page using JS function </b></p>
+    <pre id="3" class="collapse">
+        <p><button [routerLink]="['/views/daily-updates1/navigate-using-js']" >Navigate (not using href)</button></p>
     </pre>
 </div>
