Added intro to table component

--- a/src/app/views/project-comp/tables/tables.component.html
+++ b/src/app/views/project-comp/tables/tables.component.html
@@ -1,1 +1,15 @@
-<p>tables works!</p>
+<div class="text-center">
+    <h4>Tables</h4>
+</div>
+
+<div>
+    <p>Introduction :</p>
+    <p></p>
+</div>
+
+<div>
+    <p>Classes :</p>
+    table tag - table, table-striped, table-bordered, table-hover, table-condensed<br>
+    tr, th, td tag - active, success, info, warning, danger<br>
+    div above table tag - table-responsive<br>
+</div>
